web-infras/parser/tests/fixtures/self-added/decorators/error-ctor-decorator/output.txt
[SyntaxError]: Decorators can't be used with a constructor. (2,5)
2|    @autobind
 |   ^
